# ai-content-generator

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
